--- a/wiki/templates/edit_page.html
+++ b/wiki/templates/edit_page.html
@@ -6,6 +6,12 @@
     <table>
       {{ page_form.as_table }}
     </table>
-    <button type="submit">Create</button>
+    <button type="submit">
+      {% if page_form.instance.pk %}
+      Save
+      {% else %}
+      Create
+      {% endif %}
+    </button>
   </form>
 {% endblock %}
