--- a/wiki/templates/page.html
+++ b/wiki/templates/page.html
@@ -3,10 +3,13 @@
 {% block content %}
 
 {% if page %}
-<h1>{{ page.title }}</h1>
+<h1>{{ page_title }}</h1>
 <div>
-    {{ page.content }}
+    {{ page_content | safe }}
 </div>
+<a href="{% url 'page_edit' slug %}">
+  <button>Edit</button>
+</a>
 {% else %}
 <div>
   The page you requested for doesn't exist. But you can <a href="{% url 'page_edit' slug %}">create</a> it.
