--- a/wiki/templates/base.html
+++ b/wiki/templates/base.html
@@ -1,9 +1,18 @@
+<!DOCTYPE html>
+{% load staticfiles %}
 <html>
-<head>
-  <title>{{ title }}</title>
-</head>
-<body>
-  {% block content %}
-  {% endblock %}
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="{% static 'lib/bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet" media="screen"/>
+    <link href="{% static 'css/main.css' %}" rel="stylesheet" media="screen"/>
+    <title>{{ title }}</title>
+  </head>
+  <body>
+    <div class="container">
+      {% block content %}
+      {% endblock %}
+    </div>
+    <script src="{% static 'lib/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+  </body>
 </html>
