--- a/wiki/templates/edit_page.html
+++ b/wiki/templates/edit_page.html
@@ -1,17 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <form method="post">
-    {% csrf_token %}
-    <table>
-      {{ page_form.as_table }}
-    </table>
-    <button type="submit">
+  <div id="create-wiki-container">
+    <div id="create-wiki-header">
       {% if page_form.instance.pk %}
-      Save
+        <h3>Edit - {{ page_title }}</h3>
       {% else %}
-      Create
+        <h3>Create a new wiki page.</h3>
       {% endif %}
-    </button>
-  </form>
+      <hr/>
+    </div>
+    <form method="post">
+      {% csrf_token %}
+      <table>
+        {{ page_form.as_p }}
+      </table>
+      <button type="submit" id="create-wiki-button" class="btn btn-default btn-lg btn-block">
+        {% if page_form.instance.pk %}
+        Save
+        {% else %}
+        Create
+        {% endif %}
+      </button>
+    </form>
+  </div>
 {% endblock %}
