Move templates to 'wiki' directory Update migrations

--- a/wiki/templates/wiki/base.html
+++ b/wiki/templates/wiki/base.html
@@ -13,6 +13,8 @@
       {% block content %}
       {% endblock %}
     </div>
+    {% block javascript %}
     <script src="{% static 'lib/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+    {% endblock javascript %}
   </body>
 </html>
