--- a/wiki/templates/wiki/edit_page.html
+++ b/wiki/templates/wiki/edit_page.html
@@ -12,14 +12,21 @@
     </div>
     <form method="post">
       {% csrf_token %}
-      <table>
-        {{ page_form.as_p }}
-      </table>
+      {% for field in page_form %}
+        <div class="fieldWrapper">
+            {{ field.errors }}
+            {{ field }}
+            <br/>
+            {% if field.help_text %}
+              <p class="help">{{ field.help_text | safe }}</p>
+            {% endif %}
+        </div>
+      {% endfor %}
       <button type="submit" id="create-wiki-button" class="btn btn-default btn-lg btn-block">
         {% if page_form.instance.pk %}
-        Save
+          Save
         {% else %}
-        Create
+          Create
         {% endif %}
       </button>
     </form>
