--- a/wiki/templates/wiki/page.html
+++ b/wiki/templates/wiki/page.html
@@ -7,9 +7,9 @@
         <h3>{{ page_title }}</h3>
         <hr/>
         <div id="actions">
-          <ul id="action-list">
-            <li><a class="wlink" href="{% url 'page_edit' slug %}">Edit</a></li>
-            <li><a class="wlink" href="{% url 'page_edit' slug %}">Share</a></li>
+          <ul class="no-bullet">
+            <li class="inline"><a href="{% url 'page_edit' slug %}">Edit</a></li>
+            <li class="inline"><a href="{% url 'page_edit' slug %}">Share</a></li>
           </ul>
         </div>
         <br>
