Add auth and signup functionality.

--- a/wiki/templates/wiki/base.html
+++ b/wiki/templates/wiki/base.html
@@ -10,6 +10,13 @@
   </head>
   <body>
     <div class="container">
+      {% if request.user.is_authenticated %}
+        <form method="post" action="{% url 'logout' %}">
+          {% csrf_token %}
+          <input type="hidden" name="next" value="/"/>
+          <button type="submit" class="btn btn-link">logout</button>
+        </form>
+      {% endif %}
       {% block content %}
       {% endblock %}
     </div>
