--- a/wiki/templates/registration/signup.html
+++ b/wiki/templates/registration/signup.html
@@ -1,10 +1,12 @@
 {% extends "wiki/base.html" %}
 
 {% block content %}
+<div id="reg_form">
   <form method="post">
     {% csrf_token %}
     {% for field in signup_form %}
       <div class="fieldWrapper">
+        <!-- TODO: Throw in some cool design for login page-->
           {{ field.errors }}
           {{ field }}
           <br/>
@@ -13,6 +15,7 @@
           {% endif %}
       </div>
     {% endfor %}
-    <button type="submit">Signup</button>
+    <button class="btn btn-default btn-lg btn-block" type="submit">Signup</button>
   </form>
+</div>
 {% endblock %}
