--- a/wiki/templates/wiki/partials/list_pages.html
+++ b/wiki/templates/wiki/partials/list_pages.html
@@ -1,3 +1,4 @@
+{% if pages.count != 0 %}
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">Recent wikis</h3>
@@ -10,3 +11,6 @@
     </ul>
   </div>
 </div>
+{% else %}
+  <span>No wikis yet.</span>
+{% endif %}
